# diagrams-svg

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGES  CHANGES.markdown  LICENSE  README.md  cabal.project  diagrams-svg.cabal
.github/workflows/: haskell-ci.yml
examples/: AttrTest.hs  Clipping.hs  Explode.hs  FillRule.hs  Gradient.hs  Image.hs  LineStyles.hs  Opacity.hs  Pentaflake.lhs  Text.hs  TextScaling.hs  TextSize.hs  opts.hs
src/Diagrams/Backend/: SVG.hs
src/Diagrams/Backend/SVG/: Attributes.hs  CmdLine.hs  Combat.hs
src/Graphics/Rendering/: SVG.hs
