Name:                diagrams-svg
Version:             1.4.0.4
Synopsis:            SVG backend for diagrams drawing EDSL.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md, CHANGELOG.md
Author:              Felipe Lessa, Deepak Jois
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-svg/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.1
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to SVG
                     files.  It uses @lucid-svg@ to be a native
                     Haskell backend, making it suitable for use on
                     any platform.
                     .
                     The package provides the following modules:
                     .
                     * "Diagrams.Backend.SVG.CmdLine" - if you're
                       just getting started with diagrams, begin here.
                     .
                     * "Diagrams.Backend.SVG" - look at this next.
                       The general API for the SVG backend.
                     .
                     Additional documentation can be found in the
                     README file distributed with the source tarball or
                     viewable on GitHub:
                     <https://github.com/diagrams/diagrams-svg/blob/master/README.md>.
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-svg

Library
  Exposed-modules:     Diagrams.Backend.SVG
                       Diagrams.Backend.SVG.CmdLine
  Other-modules:       Graphics.Rendering.SVG
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.3   && < 4.10
                     , old-time
                     , process
                     , directory
                     , filepath
                     , mtl                  >= 1     && < 2.3
                     , bytestring           >= 0.9   && < 1.0
                     , base64-bytestring    >= 1     && < 1.1
                     , colour
                     , diagrams-core        >= 1.3   && < 1.4
                     , diagrams-lib         >= 1.3   && < 1.4
                     , monoid-extras        >= 0.3   && < 0.5
                     , svg-builder          >= 0.1   && < 0.2
                     , text                 >= 0.11  && < 1.3
                     , JuicyPixels          >= 3.1.5 && < 3.3
                     , split                >= 0.1.2 && < 0.3
                     , time
                     , containers           >= 0.3   && < 0.6
                     , lens                 >= 4.0   && < 4.15
                     , hashable             >= 1.1   && < 1.3
                     , optparse-applicative >= 0.13  && < 0.14
                     , semigroups           >= 0.13  && < 0.19
  if impl(ghc < 7.6)
    build-depends:     ghc-prim

  Ghc-options:         -Wall

  Default-language:  Haskell2010
