Name:                diagrams-svg
Version:             1.4.3.2
Synopsis:            SVG backend for diagrams drawing EDSL.
Homepage:            https://diagrams.github.io/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md, CHANGELOG.md
Author:              Felipe Lessa, Deepak Jois
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/diagrams/diagrams-svg/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to SVG
                     files.  It uses @svg-builder@ to be a native
                     Haskell backend, making it suitable for use on
                     any platform.
                     .
                     The package provides the following modules:
                     .
                     * "Diagrams.Backend.SVG.CmdLine" - if you're
                       just getting started with diagrams, begin here.
                     .
                     * "Diagrams.Backend.SVG" - look at this next.
                       The general API for the SVG backend.
                     .
                     Additional documentation can be found in the
                     README file distributed with the source tarball or
                     viewable on GitHub:
                     <https://github.com/diagrams/diagrams-svg/blob/master/README.md>.
Source-repository head
  type:     git
  location: http://github.com/diagrams/diagrams-svg

Library
  Exposed-modules:     Diagrams.Backend.SVG
                       Diagrams.Backend.SVG.CmdLine
  Other-modules:       Graphics.Rendering.SVG
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.7   && < 4.21
                     , filepath             >= 1.4   && < 1.6
                     , mtl                  >= 1     && < 2.4
                     , bytestring           >= 0.9   && < 1.0
                     , base64-bytestring    >= 1     && < 1.3
                     , colour               >= 2.3   && < 2.4
                     , diagrams-core        >= 1.4   && < 1.6
                     , diagrams-lib         >= 1.4.5 && < 1.5
                     , monoid-extras        >= 0.3   && < 0.7
                     , svg-builder          >= 0.1   && < 0.2
                     , text                 >= 0.11  && < 2.2
                     , JuicyPixels          >= 3.1.5 && < 3.4
                     , split                >= 0.1.2 && < 0.3
                     , containers           >= 0.3   && < 0.8
                     , lens                 >= 4.0   && < 5.4
                     , hashable             >= 1.1   && < 1.6
                     , optparse-applicative >= 0.13  && < 0.19
                     , semigroups           >= 0.13  && < 0.21

  Ghc-options:         -Wall

  Default-language:  Haskell2010
